Changed personal infos background, goals and social links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
+          <li class="name">Jumphy</li>
           <li><a href="#">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
@@ -18,15 +18,16 @@
 
     <header>
       <img src="images/me.jpg" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <h1 class="tag name">Hello, I’m Jumphy.</h1>
+      <p class="tag location">My home is Rome, Italy.</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I’m engineer, expert of printing and publishing. After the post-pc era, the way of doing communication has dramatically changed, so I understood that I had to reinvent my skills, since the interest of people was quickly moving from printed paper to something much more attractive. For this reason, I started to study again, combining my previous experience of publisher together with my first vocation, engineering. And I realized that making websites is much more complex, as well engaging, than making a magazine or a book.</p>
+        <p>So, I started to frequent online courses trying to go as deeper as possible. I mastered several tools from Adobe CC, and I did my experience in creating websites using the Business Catalyst platform.</p>
+        <p>I like to have full control of any process, and the more I study, the more I become hungry, because I am really taken from this universe. So I decided to accept Treehouse challenge, and I subscribed to this Teachdegree. And I like to believe that if things will go in the right way, I will try to master more and more arguments through Teachdegree experiences.</p>
       </div> 
 
       <div class="card">
@@ -45,11 +46,11 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/jumphy" class="social twitter">Twitter</a></li>
+        <li><a href="https://it.linkedin.com/in/gianfilippo-coletta-49328718" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/jumphy" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2016, Gianfilippo Coletta</p>
     </footer>
   </body>
   </html>
