Added a page. Styled the top-menu, and the main section. Added images

--- a/index.html
+++ b/index.html
@@ -2,32 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Jumphy's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+</head> 
   <body>
 
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Jumphy</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="index.html" class="selected">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.jpg" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jumphy.</h1>
-      <p class="tag location">My home is Rome, Italy.</p>
+      <img src="images/me.jpg" alt="Drawing of Jumphy" class="profile-image">
+      <h1 class="tag name">Hello, I’m Jumphy</h1>
+      <p class="tag location">My home is Rome, Italy</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m engineer, expert of printing and publishing. After the post-pc era, the way of doing communication has dramatically changed, so I understood that I had to reinvent my skills, since the interest of people was quickly moving from printed paper to something much more attractive. For this reason, I started to study again, combining my previous experience of publisher together with my first vocation, engineering. And I realized that making websites is much more complex, as well engaging, than making a magazine or a book.</p>
-        <p>So, I started to frequent online courses trying to go as deeper as possible. I mastered several tools from Adobe CC, and I did my experience in creating websites using the Business Catalyst platform.</p>
-        <p>I like to have full control of any process, and the more I study, the more I become hungry, because I am really taken from this universe. So I decided to accept Treehouse challenge, and I subscribed to this Teachdegree. And I like to believe that if things will go in the right way, I will try to master more and more arguments through Teachdegree experiences.</p>
+        <p>I’m engineer, expert of printing and publishing. After the post-pc era, the way of doing communication has dramatically changed, so I understood that it was time for me to reinvent my skills, since the interest of people was quickly moving from printed paper to something much more attractive. For this reason, I started to study again, combining my previous experience of publisher together with my first vocation, engineering. And I realized that making websites is much more complex, as well engaging, than making a magazine or a book.</p>
+        <p>So, I started to frequent online courses trying to go as deeper as possible. I mastered several tools from Adobe CC, and I did my experience until now by creating websites using the Business Catalyst platform.</p>
+        <p>I like to have full control of processes, and the more I study, the more I become hungry, because I am really taken from this universe. So I decided to accept Treehouse challenge, and I subscribed to this Teachdegree. And I like to believe that if things will go in the right way, I will try to master more and more arguments through Teachdegree experiences.</p>
       </div> 
 
       <div class="card">
@@ -40,15 +41,15 @@
           <li>Ruby</li>
           <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d also like to master in iOS and Android Development.</p>
       </div> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/jumphy" class="social twitter">Twitter</a></li>
-        <li><a href="https://it.linkedin.com/in/gianfilippo-coletta-49328718" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/jumphy" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/jumphy" target="_blank" class="social twitter">Twitter</a></li>
+        <li><a href="https://it.linkedin.com/in/gianfilippo-coletta-49328718" target="_blank" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/jumphy" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2016, Gianfilippo Coletta</p>
     </footer>
