--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Background</h2>
         <p>I’m engineer, expert of printing and publishing. After the post-pc era, the way of doing communication has dramatically changed, so I understood that it was time for me to reinvent my skills, since the interest of people was quickly moving from printed paper to something much more attractive. For this reason, I started to study again, combining my previous experience of publisher together with my first vocation, engineering. And I realized that making websites is much more complex, as well engaging, than making a magazine or a book.</p>
         <p>So, I started to frequent online courses trying to go as deeper as possible. I mastered several tools from Adobe CC, and I did my experience until now by creating websites using the Business Catalyst platform.</p>
-        <p>I like to have full control of processes, and the more I study, the more I become hungry, because I am really taken from this universe. So I decided to accept Treehouse challenge, and I subscribed to this Teachdegree. And I like to believe that if things will go in the right way, I will try to master more and more arguments through Teachdegree experiences.</p>
+        <p>I like to have full control of processes, and the more I study, the more I become hungry, because I am really taken from this universe. So I decided to accept the Treehouse challenge, and I subscribed to this Teachdegree. And I like to believe that if things will go in the right way, I will try to master more and more arguments through Teachdegree experiences.</p>
       </div> 
 
       <div class="card">
