styled and added content to goals section

--- a/index.html
+++ b/index.html
@@ -33,15 +33,24 @@
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p> The use of a grafic interface to build a website is not enough for me. In fact I like to understand what I am doing. For this reason I need to possibly have full control of the processes that I manage. I really desire to master the process of building web sites. </p>
         <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li><img src="images/logos/HTML5.png" alt="HTML 5"></li>
+          <li><img src="images/logos/css-beginners-tutorial.jpg" alt="CSS 3"></li>
+          <li><img src="images/logos/learn-javascript.png" alt="javaScript"></li>
         </ul>
-        <p>I’d also like to master in iOS and Android Development.</p>
+        <p>When I will have a solid base background, I will try to extend my knowledge trying to master: </p>
+                <ul class="skills">
+          <li><img src="images/logos/Java_logo.png" alt="Java"></li>
+          <li><img src="images/logos/Ruby-Logo.png" alt="Ruby"></li>
+          <li><img src="images/logos/2000px-Ruby_on_Rails_logo.svg.png" alt="Ruby on Rails"></li>
+          <li><img src="images/logos/python-logo.png" alt="Pyton"></li>
+        </ul>
+        <p>Least, but not last, because we live in the post pc era, mobile devices are more and more important. So, to complete my training and to be able to provide to my clients the best experience, I think important also to master in iOS and Android Development.</p>
+        <ul class="skills">
+          <li><img src="images/logos/ios-developer-257x300.png" alt="iOs Developer"></li>
+          <li><img src="images/logos/android-developer.jpg" alt="Android Developer"></li>
+        </ul>
       </div> 
 
     </main>
